--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="http://vip.qdxin.cn/lin/wb/json/lottie-player.js"></script>
   </body>
 </html>
